--- a/about.html
+++ b/about.html
@@ -46,12 +46,15 @@
 <!-------------------main------------------->
 
 <main id="main-content" role="main">
-<section class="index"><h1>Ιστοσελίδα-βοηθός για Προσβάσιμα PDF</h1>
-<p><b>Καλώς Ήρθατε!</b> Η παρούσα Ιστοσελίδα έχει σκοπό να σας μάθει βασικές ενέργειες με τις οποίες μπορείτε να κάνετε τα PDF σας πιο προσβάσιμα. 
-Για την εξυπηρέτηση και συμπερίληψη του ευρύτερου κοινού, θα χρησιμοποιηθεί η εφαρμογή Google Docs ως πρόγραμμα συγγραφής PDF, η οποία είναι διαθέσιμη δωρεάν για όλους.</p>
-<p class="indexlink"><a href="https://docs.google.com/">Σύνδεσμος προς εφαρμογή Google Docs</a></p>
-</section>
+<section class="index"><h1>Βασικές Πληροφορίες για τη Ψηφιακή Προσβασιμότητα</h1>
+<p>Η Ψηφιακή Προσβασιμότητα πρόκειται για την ιδιότητα του κάθε ψηφιακού περιβάλλοντος να είναι προσβάσιμο σε όλους. Για να είναι ένα ψηφιακό περιβάλλον προσβάσιμο, πρέπει να τηρεί συγκεκριμένες προϋποθέσεις κατά τη σχεδίασή του. Αυτές οι προϋποθέσεις με τη σειρά τους του δίνουν τις κατάλληλες ιδιότητες οι οποίες το κάνουν προσβάσιμο σε άτομα με αναπηρίες, άτομα με ειδικές εκπαιδευτικές ανάγκες, άτομα που χρησιμοποιούν υποστηρικτικές τεχνολογίες, άτομα που αλληλεπιδρούν με το περιβάλλον κάτω από δύσκολες περιβαλλοντικές συνθήκες, κ.α.</p>
 
+<p>Παρακάτω παρατίθενται μερικές ιστοσελίδες με περισσότερες πληροφορίες: </p>
+<p class="aboutlink">
+<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">Εισαγωγή στη Ψηφιακή Προσβασιμότητα του WAI</a>
+<br><a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Οδηγίες Ψηφιακής Προσβασιμότητας WCAG</a>
+<br><a href="https://wave.webaim.org/">Έλεγχος Ψηφιακής Προσβασιμότητας Ιστοσελίδων WAVE</a></p>
+</section>
 </main>
 </body>
 
@@ -70,5 +73,7 @@
 
 </div>
 </footer>
+
+
 <script src="scripts.js" ></script>
 </html>
