--- a/alttext.html
+++ b/alttext.html
@@ -49,7 +49,7 @@
 
   <section class="quiz"><h1>Εναλλακτικό Κείμενο (Alternative Text)</h1>
 <p>Το Εναλλακτικό Κείμενο (Alternative Text) είναι κείμενο που συμπεριλαμβάνεται στο κώδικα της ψηφιακής εφαρμογής μαζί με την εικόνα στην οποία αντιστοιχεί, και περιγράφει το περιεχόμενο της εικόνας.</p>
-  <p>Το Εναλλακτικό Κείμενο πρέπει να περιγράφει με <b>λίγα</b> λόγια το περιεχόμενο της εικόνας, έτσι ώστε να μεταφέρει στο χρήστη που πλοηγέιτε στην ιστοσελίδα με Αναγνώστη Οθόνης την απαραίτητη πληροφορία της εικόνας.</p> 
+  <p>Το Εναλλακτικό Κείμενο πρέπει να περιγράφει με <b>λίγα λόγια</b> το περιεχόμενο της εικόνας, έτσι ώστε να μεταφέρει στο χρήστη που πλοηγέιτε στην ιστοσελίδα με Αναγνώστη Οθόνης την απαραίτητη πληροφορία της εικόνας.</p> 
   <p>Όσο πιο λεπτομερής είναι η περιγραφή της εικόνας, τόσο περισσότερο χρόνο χάνει ο χρήστης περιμένοντας να τελειώση η προφορική περιγραφή.</p>
     <p><b>Πρόταση:</b> Αν πλοηγηθείται στην ιστοσελίδα με τη βοήθεια ενός Αναγνώστη Οθόνης (Screen Reader), μπορείται να δείτε της σωστές απαντήσεις διαβάζοντας το εναλλακτικό κείμενο των εικόνων στην αρχή της κάθε Ενότητας του τεστ.</p>
 </section>
