--- a/alttext.html
+++ b/alttext.html
@@ -11,7 +11,7 @@
 <body>
 <!-------------------skip to content---------->
 
-<a href="#main-content" class="skipmain">Skip to main content</a>
+<a href="#main-content" class="skipmain">Μεταφορά στο Κύριο Περιεχόμενο.</a>
 
 <!-------------------header------------------->
 
