--- a/alttext.html
+++ b/alttext.html
@@ -23,8 +23,8 @@
 
 <!-------------------navbar------------------->
 
-<nav role="navigation">
-<ul aria-label="Κύριο Μενού">
+<nav role="navigation" aria-label="Κύριο Μενού">
+<ul>
    <li>
     <a href="index.html">ΑΡΧΙΚΗ</a>
    </li>
