--- a/guide.html
+++ b/guide.html
@@ -48,11 +48,11 @@
 
 <main id="main-content" role="main">
 <section class="guide"><h1>Οδηγίες Δημιουργίας Προσβάσιμου PDF <br>στο Google Docs</h1></section>
-<section role="navigation" aria-label="Μενού Οδηγού" class="guidesnav">
+<section class="guidesnav"><nav role="navigation" aria-label="Μενού Οδηγού">
 <a href="#lang">Γλώσσα Αρχείου</a> <a href="#heads">Τίτλοι (Headings)</a> 
 <a href="#altt">Alternative Text (Εναλλακτικό Κείμενο)</a>
 <a href="#linksg">Σύνδεσμοι (Links)</a> <a href="#clrcontr">Color Contrast (Αντίθεση Χρωμάτων)</a>
-</section>
+</nav></section>
 
 <section id="lang" class="guide">
   <h1>Γλώσσα Αρχείου</h1>
